Update de05r.yaml -- fixup

--- a/data/de05r/de05r.yaml
+++ b/data/de05r/de05r.yaml
@@ -63,6 +63,7 @@ constraints:
        Elli: Xander
        Viki: Leandro
        Hati: CalvinO
+       Henna: Jonny
        Nelly: Sidar
        SandraJanina: Kevin
        Joanna: Rob
