--- a/data/de05r/de05r.yaml
+++ b/data/de05r/de05r.yaml
@@ -107,8 +107,31 @@ constraints:
       Ariel: CalvinHot
       # Sandra: Sidar
 
-  # - type: !Box {num: 4, comment: "E09"}
+  - type: !Box {num: 4, comment: "E09"}
+    check: !Lights [0]
+    map:
+      # Nelly: Rob
+      Beverly: Jonny
+
+  - type: !Night {num: 4, comment: "E10"}
+    check: !Lights [3]
+    # buildTreee: true
+    # resultUnknown: true
+    map:
+      Elli: Xander
+      Joanna: CalvinBlond
+      Nelly: CalvinHot
+      Sandra: Leandro
+      Ariel: Nico
+      Beverly: Sidar
+      Henna: Lennert
+      Viki: Kevin
+      Hati: Rob
+      Antonia: Olli
+      # Jonny
+
+  # - type: !Box {num: 5, comment: "E11"}
   #   check: !Lights [0]
   #   map:
-  #     # Nelly: Rob
-  #     Beverly: Jonny
+  #     Sandra: Leandro
+  #     # Viki: Jonny
