--- a/data/de01/de01.yaml
+++ b/data/de01/de01.yaml
@@ -6,7 +6,8 @@ frontmatter:
   identifier: de-season1
   weight: 1
 
-rule_set: !FixedDup Edin
+rule_set: !XTimesDup [Edin]
+
 # rule_set: !Eq
 
 setA:
