--- a/data/de02/de02.yaml
+++ b/data/de02/de02.yaml
@@ -7,7 +7,7 @@ frontmatter:
   weight: 1
 
 # rule_set: !SomeoneIsDup
-rule_set: !FixedDup VanessaM
+rule_set: !XTimesDup [VanessaM]
 
 setA:
   - Aaron
