implement optional caching of left possibilities
caching

--- a/data/.template.yaml
+++ b/data/.template.yaml
@@ -5,7 +5,7 @@ frontmatter:
   title: 'DE Staffel 1'
   weight: 1
 
-tree_gen: false
+gen_cache: false
 
 # rule_set: !SomeoneIsDup
 # rule_set: !FixedDup Christina
